--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Description that needs to be changed some time soon",
   "license": "AGPL-3.0",
   "repository": "https://github.com/amos-ws16/amos-ws16-arrowjs",
+  "main": "lib/score-manager",
   "devDependencies": {
     "buster": "^0.7.18",
     "coveralls": "^2.11.14",
@@ -23,7 +24,6 @@
     "coveralls": "npm run cover && nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
     "verror": "^1.9.0",
     "string-similarity": "^1.1.0",
     "keyword-extractor": "0.0.13"
