--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/amos-ws16/amos-ws16-arrowjs",
   "devDependencies": {
     "buster": "^0.7.18",
+    "cli-table": "^0.3.1",
     "coveralls": "^2.11.14",
     "cross-env": "^3.1.3",
     "eslint": "^3.9.0",
