--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "eslint **/*.js && buster-test",
     "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text buster-test",
     "coveralls": "npm run cover && nyc report --reporter=text-lcov | coveralls",
-    "scoretest": "node ./test/test-cases/test-cases-run.js"
+    "scoretest": "node ./test/test-cases/test-cases-test.js && node ./test/test-cases/test-cases-run.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
