--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "main": "lib/score-manager",
   "devDependencies": {
     "buster": "^0.7.18",
-    "cli-table": "^0.3.1",
     "coveralls": "^2.11.14",
     "cross-env": "^3.1.3",
     "eslint": "^3.9.0",
@@ -22,8 +21,7 @@
     "eslintfix": "eslint --fix **/*.js",
     "test": "eslint . && buster-test",
     "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text buster-test",
-    "coveralls": "npm run cover && nyc report --reporter=text-lcov | coveralls",
-    "scoretest": "node ./test/test-cases/test-cases-test.js && node ./test/test-cases/test-cases-run.js"
+    "coveralls": "npm run cover && nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "verror": "^1.9.0",
